<resources>
    <string name="app_name">Income/Expenses</string>
    <string name="youSum">YouSum</string>
    <string name="add">Add</string>
    <string name="sum">Sum</string>
    <string name="title">Title</string>
    <string name="dateAndTime">Date and time</string>
    <string name="description">Description</string>
    <string name="delete_record">Delete Record</string>
    <string name="button_map">This map</string>
    <string name="iconImage">Add image</string>
</resources>
